Some fixes and testing authentication